--- a/sass/header/fixed-wrapper.scss
+++ b/sass/header/fixed-wrapper.scss
@@ -4,7 +4,14 @@
     height: auto;
     width:960px;
     margin:0 auto;
-    
+    @media (max-width:767px) {
+	width:680px;
+    }
+        @media (max-width:360px) {
+	width:320px;
+    }
+
+	
 }
 
 
