--- a/sass/header/our-work.scss
+++ b/sass/header/our-work.scss
@@ -2,6 +2,11 @@
 .btn-wrapper {
     text-align:center;
     padding: 55px 0 0 0;
+    @media (max-width:360px) {
+	    padding: 30px 0 0 0;
+	
+	   }
+ 
 }
 
 .our-work {
@@ -11,6 +16,7 @@
     background:none;
     border:1px solid #fff;
     padding:15px 30px;
+    cursor:pointer;
    
 }
 
