--- a/sass/header/title.scss
+++ b/sass/header/title.scss
@@ -1,5 +1,3 @@
-
-
 .title {
     padding:195px 0 0 0;
     text-align:center;
@@ -7,7 +5,6 @@
     font-size:16px;
     color:#fff;
     text-rendering: optimizeLegibility;
-    
     
     &__company-name:before {
 	content:"\f1db";
@@ -47,6 +44,17 @@
 	text-transform:uppercase;
 	margin:20px 0;
     }
+
+           @media (max-width:360px) {
+	       &__company-preview:after {
+		   display:none;
+	       }
+	       &__company-preview:before {
+		   display:none;
+	       }
+	       padding:20px 0 0 0;
+    }
+ 
     
 }
 
