--- a/sass/import.scss
+++ b/sass/import.scss
@@ -17,6 +17,24 @@
 @import 'sass/services/services-intro';
 @import 'sass/services/our-services';
 
+@import 'sass/portfolio/int-portfolio';
+@import 'sass/portfolio/our-portfolio';
+
+@import 'sass/team/our-team';
+@import 'sass/team/int-team';
+@import 'sass/team/team-soc-links';
+
+@import 'sass/blog/our-blog';
+@import 'sass/blog/int-blog';
+
+@import 'sass/contact-us/int-contact-us';
+@import 'sass/contact-us/callback';
+@import 'sass/contact-us/write-us';
+@import 'sass/contact-us/callback-form';
+@import 'sass/contact-us/address';
+
+
+
 
 
 
