--- a/sass/main/advantages.scss
+++ b/sass/main/advantages.scss
@@ -22,6 +22,18 @@
 	color:#626E62;
 	width:250px;
     }
+    @media (max-width:360px) {
+	&__title {
+	    font-size:36px;
+	    line-height:48px;
+	}
+	&__short-description {
+	    padding:20px 30px 0 30px;
+	    font-size:16px;
+	    line-height:32px;
+	}
+	   }
+ 
 }
 
 
