--- a/sass/main/past-content.scss
+++ b/sass/main/past-content.scss
@@ -1,8 +1,21 @@
+.preloader {
+    position:absolute;
+    z-index:1000;
+    top:758px;
+    left:0;
+    width:100%;
+    height:100%;
+    background:white;
+    transition:all .15s;
 
+    &--hidden {
+	display:none;
+    }
+}
 
 .past-content {
-    width: auto;
-    height: auto;
+    
+    
 }
 
 
