--- a/sass/main/present-icons.scss
+++ b/sass/main/present-icons.scss
@@ -25,6 +25,11 @@
 	margin:20px 0 0 0;
 	padding:0 2px 0 0;
     }
+    @media (max-width:360px) {
+	width:320px;
+	padding:45px 0 0 0;
+
+	   }
 }
 
 
