--- a/sass/import.scss
+++ b/sass/import.scss
@@ -1,9 +1,13 @@
+
 @import 'sass/header/header';
 @import 'sass/header/fixed-wrapper';
 @import 'sass/header/title';
 @import 'sass/header/our-work';
 @import 'sass/main/site-parts.scss';
+
 @import 'sass/main/past-content';
+@import 'sass/main/preloader';
+
 @import 'sass/main/advantages-background';
 @import 'sass/main/advantages';
 @import 'sass/main/present-icons';
