--- a/sass/footer/social-links.scss
+++ b/sass/footer/social-links.scss
@@ -4,7 +4,10 @@
     flex-direction:row;
     justify-content:space-between;
     align-items:center;
-    height:65px;;
+    height:65px;
+     @media (max-width:360px){
+	 justify-content:center;
+    }  
 }
 .social-links {
   display:flex;
@@ -15,7 +18,7 @@
     margin:0;
     color:#fff;
  
-  
+   
 }
 
 
