--- a/sass/header/fixed-wrapper.scss
+++ b/sass/header/fixed-wrapper.scss
@@ -2,16 +2,18 @@
 .fixed-wrapper {
     position:relative;
     height: auto;
-    width:960px;
+    max-width:960px;
     margin:0 auto;
-    @media (max-width:767px) {
-	width:680px;
+    
+    
+    @media (max-width:765px) {
+	min-width:500px;
     }
-        @media (max-width:360px) {
-	width:320px;
+    @media (max-width:360px) {
+	min-width:340px;
     }
 
-	
+    
 }
 
 
