--- a/sass/main/present-icons.scss
+++ b/sass/main/present-icons.scss
@@ -3,7 +3,7 @@
     display:flex;
     flex-direction:row;
     justify-content:space-between;
-    width:620px;
+    max-width:620px;
     margin:0 auto;
     padding:83px 0 0 0;
     text-decoration:none;
@@ -25,6 +25,7 @@
 	margin:20px 0 0 0;
 	padding:0 2px 0 0;
     }
+  
     @media (max-width:360px) {
 	width:320px;
 	padding:45px 0 0 0;
